fixed text align for media query

--- a/portfolio_project/src/index.css
+++ b/portfolio_project/src/index.css
@@ -634,6 +634,9 @@ cursor: pointer;
   }
 
 
+  #about p {
+    text-align: center;
+  }
 
 
   .nav-item:active {
